--- a/app/views/components/_menu.html.haml
+++ b/app/views/components/_menu.html.haml
@@ -6,6 +6,9 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
+      %a.navbar-brand{:href => "/",:style=>"color:white;"}
+        %span.fa.fa-paper-plane
+        BTM
     .navbar-collapse.collapse{:style => "height: 1px;"}
       %ul.nav.navbar-nav.navbar-left
         %li
