--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -10,10 +10,15 @@
     clear: both;
 }
 .back-banner{
-    background-image: url("/assets/back_banner.jpg");
+    background-image: url("/assets/back_banner1.jpg");
     background-repeat: round;
     width: 100%;
-    height:250px;
+    height:300px;
+}
+.label-title{
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
 }
 .nav-tabs { border-bottom: 2px solid #DDD; }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
