--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,23 +1,26 @@
 .back-banner
+  .h-20
+  .h-20
   .col-md-12
-    .text-center
-      %h2{:style=>"color:white;"}
+    .col-md-6
+    .col-md-6
+      %h2{:style=>"color:black;font-weight:bold;"}
         Network of over 1000 Restaurants
         %br
       %h3
-        %p{:style=>"color:white;"} To Find Restaurant
-    %br
-    .col-md-12
-      .col-md-3
-      .col-md-6{:style=>"padding-left:20px;"}
-        .col-md-5
-          .form-group
-            %label{:style=>"color:white;"} Location
-            %input{:type=>"text",:class=>"form-control"}
-        .col-md-5
-          .form-group
-            %label{:style=>"color:white;"} Restaurant
-            %input{:type=>"text",:class=>"form-control"}
-        .col-md-2{:style=>"padding-top:25px;"}
-          %button{:type=>"button",:class=>"btn btn-default"} Search
-      .col-md-2
+        %p.label-title{:style=>"padding-left:115px;"} To Find Restaurant
+    .h-100{:style=>"height:100px;clear:both;"}
+    .pull-right
+      .col-md-3.col-xs-3.col-sm-3
+        %input{:type=>"text",:class=>"form-control",:placeholder=>"Location"}
+      .col-md-3.col-xs-3.col-sm-3
+        %input{:type=>"text",:class=>"form-control",:placeholder=>"Restaurant"}
+      .col-md-3.col-xs-3.col-sm-3
+        %select.form-control
+          %option{:value=>"book_restaurant"} Book Restaurant
+          %option{:value=>"home_delivery"} Home Delivery
+      .col-md-3.col-xs-3.col-sm-3
+        %button{:type=>"button",:class=>"btn btn-default"} Search
+.row
+  .col-md-12
+    -#= render :partial => "components/img_slider"
