--- a/app/views/restaurants/list.html.haml
+++ b/app/views/restaurants/list.html.haml
@@ -1,77 +1,82 @@
-.h-20
-.col-md-12{:style=>"padding:0px;"}
-  .col-md-2{:style=>"padding-left:0px;"}
-    .panel.panel-default
-      .panel-heading
-        Cuisine
-      .panel-body{:style=>"max-height:250px;overflow:auto;"}
-        .row{:style=>"padding-left:8px;"}
-          - @cuisine_type.each do |c|
-            %p
-              %label
-                %input{:type => "checkbox",:value=>"#{c.name}"}
-                  \&nbsp;#{c.name}
-    .panel.panel-primary
-      .panel-heading
-        Area
-      .panel-body{:style=>"max-height:250px;overflow:auto;"}
-        .row{:style=>"padding-left:8px;"}
-          - @areas.each do |a|
-            %p
-              %label
-                %input{:type => "checkbox",:value=>"#{a.address1}"}
-                  \&nbsp;#{a.address1}
+.container
+  .h-20
+  .row{:style=>"padding:0px;"}
+    .col-md-3{:style=>"padding-left:0px;"}
+      .panel.panel-default
+        .panel-heading
+          Cuisine
+        .panel-body{:style=>"max-height:250px;overflow:auto;"}
+          .row{:style=>"padding-left:8px;"}
+            - @cuisine_type.each do |c|
+              %p
+                %label
+                  %input{:type => "checkbox",:value=>"#{c.name}"}
+                    \&nbsp;#{c.name}
+      .panel.panel-primary
+        .panel-heading
+          Area
+        .panel-body{:style=>"max-height:250px;overflow:auto;"}
+          .row{:style=>"padding-left:8px;"}
+            - @areas.each do |a|
+              %p
+                %label
+                  %input{:type => "checkbox",:value=>"#{a.address1}"}
+                    \&nbsp;#{a.address1}
 
-  .col-md-8{:style=>"border:1px solid;"}
-    .col-md-12.col-sm-12
-      .row.list-view-sorting.clearfix
-        .col-md-8.col-sm-8
-          .h-20
-          .input-group
-            %input.form-control{:placeholder => "Search", :type => "text"}
-              %span.input-group-btn
-                %button.btn.btn-primary{:type => "button"} Go
-        .col-md-4.col-sm-4
-          .pull-right
-            %label.control-label Sort&nbsp;By:
-            %select.form-control.input-sm
-              %option{:selected => "selected", :value => "#?sort=p.sort_order&amp;order=ASC"} Default
-              %option{:value => "#?sort=pd.name&amp;order=ASC"} Name (A - Z)
-              %option{:value => "#?sort=pd.name&amp;order=DESC"} Name (Z - A)
-              %option{:value => "#?sort=rating&amp;order=DESC"} Rating (Highest)
-              %option{:value => "#?sort=rating&amp;order=ASC"} Rating (Lowest)
-      / BEGIN PRODUCT LIST
-      .h-20
-      .row.product-list
-        - @restaurants.each do |r|
-          .col-md-12
-            .panel.panel-primary
-              .panel-body
-                .col-md-3{:style=>"padding-left:0px;"}
-                  %img.img-responsive{:src => "#{r.logo.to_s}",:style=>"margin-bottom:0px;height:130px;width:100%;",:class=>"thumbnail"}
-                .col-md-7
-                  %h3{:style=>"margin-top:0px;"}
-                    %a{:href => "/restaurants/restaurant_profile?id=#{r.id}"}
-                      = r.name
-                  %p
-                    .address
-                      %i.glyphicon.glyphicon-map-marker
-                      = r.address1
-                      ,
-                      = r.city
-                      %i.glyphicon.glyphicon-phone
-                      = r.contact1
-                  %p
-                    %i.glyphicon.glyphicon-time
-                    = r.delay_time
-                    Minutes
-                  %p
-                    %button{:type=>"button"}
-                      %i.glyphicon.glyphicon-thumbs-up
-                    %button{:type=>"button"}
-                      %i.glyphicon.glyphicon-heart
-                    Your Rating
-                .col-md-2
-                  %button{:type=>"button", :class=>"btn btn-default btn-xs"}
-                    Write Review
-  .col-md-2{:style=>"padding-right:0px;"}
+    .col-md-9
+      .col-md-12.col-sm-12
+        .row.list-view-sorting.clearfix
+          .col-md-8.col-sm-8
+            .h-20
+            .input-group
+              %input.form-control{:placeholder => "Search", :type => "text"}
+                %span.input-group-btn
+                  %button.btn.btn-primary{:type => "button"} Go
+          .col-md-2.col-sm-2
+            .h-20
+            %button.btn.btn-default{:type=>"button"} Grid
+            %button.btn.btn-default{:type=>"button"} List
+          .col-md-2.col-sm-2
+            .pull-right
+              %label.control-label Sort&nbsp;By:
+              %select.form-control.input-sm
+                %option{:selected => "selected", :value => "#?sort=p.sort_order&amp;order=ASC"} Default
+                %option{:value => "#?sort=pd.name&amp;order=ASC"} Name (A - Z)
+                %option{:value => "#?sort=pd.name&amp;order=DESC"} Name (Z - A)
+                %option{:value => "#?sort=rating&amp;order=DESC"} Rating (Highest)
+                %option{:value => "#?sort=rating&amp;order=ASC"} Rating (Lowest)
+        / BEGIN PRODUCT LIST
+        .h-20
+        .row.product-list
+          - @restaurants.each do |r|
+            .col-md-4
+              .panel.panel-primary
+                .panel-body
+                  .col-md-12{:style=>"padding:0px;"}
+                    %img.img-responsive{:src => "#{r.logo.to_s}",:style=>"margin-bottom:0px;height:130px;width:100%;",:class=>"thumbnail"}
+                  .col-md-12
+                    %h2{:style=>"margin-top:10px;"}
+                      %a{:href => "/restaurants/restaurant_profile?id=#{r.id}"}
+                        = r.name
+                    %p
+                      .address
+                        %i.glyphicon.glyphicon-map-marker
+                        = r.address1
+                        ,
+                        = r.city
+                        %i.glyphicon.glyphicon-phone
+                        = r.contact1
+                    %p
+                      %i.glyphicon.glyphicon-time
+                      = r.delay_time
+                      Minutes
+                    %p
+                      %button{:type=>"button"}
+                        %i.glyphicon.glyphicon-thumbs-up
+                      %button{:type=>"button"}
+                        %i.glyphicon.glyphicon-heart
+                      Your Rating
+                  .col-md-2
+                    %button{:type=>"button", :class=>"btn btn-default btn-xs"}
+                      Write Review
+    .col-md-2{:style=>"padding-right:0px;"}
