--- a/app/views/components/_social_media_login.html.haml
+++ b/app/views/components/_social_media_login.html.haml
@@ -2,9 +2,9 @@
   %h6{:style=>"margin-top:0px;"}
     %em SOCIAL Media
     Login
-  %a.btn.btn-block.btn-social.btn-facebook
+  %a.btn.btn-block.btn-social.btn-facebook{:href=>user_omniauth_authorize_path(:facebook)}
     %span.fa.fa-facebook
     Sign in with Facebook
-  %a.btn.btn-block.btn-social.btn-google
+  %a.btn.btn-block.btn-social.btn-google{:href=>user_omniauth_authorize_path(:google_oauth2)}
     %span.fa.fa-google
     Sign in with Google
